inventory/target/kubernetes/openshift.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations:
    app.quarkus.io/build-timestamp: "2020-06-02 - 13:49:56 +0000"
    app.openshift.io/vcs-url: "https://github.com/RedHat-Middleware-Workshops/cloud-native-workshop-v2m2-labs.git"
    app.quarkus.io/commit-id: "7327a1af74f1bad6a999ee6c0ff37a88453b4cff"
    app.quarkus.io/vcs-url: "https://github.com/RedHat-Middleware-Workshops/cloud-native-workshop-v2m2-labs.git"
  labels:
    app.kubernetes.io/name: "inventory"
    app.kubernetes.io/version: "1.0-SNAPSHOT"
    app.openshift.io/runtime: "quarkus"
  name: "inventory"
spec:
  ports:
  - name: "http"
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: "inventory"
    app.kubernetes.io/version: "1.0-SNAPSHOT"
  type: "ClusterIP"
---
apiVersion: "apps.openshift.io/v1"
kind: "DeploymentConfig"
metadata:
  annotations:
    app.quarkus.io/build-timestamp: "2020-06-02 - 13:49:56 +0000"
    app.openshift.io/vcs-url: "https://github.com/RedHat-Middleware-Workshops/cloud-native-workshop-v2m2-labs.git"
    app.quarkus.io/commit-id: "7327a1af74f1bad6a999ee6c0ff37a88453b4cff"
    app.quarkus.io/vcs-url: "https://github.com/RedHat-Middleware-Workshops/cloud-native-workshop-v2m2-labs.git"
  labels:
    app.kubernetes.io/name: "inventory"
    app.kubernetes.io/version: "1.0-SNAPSHOT"
    app.openshift.io/runtime: "quarkus"
  name: "inventory"
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: "inventory"
    app.kubernetes.io/version: "1.0-SNAPSHOT"
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: "2020-06-02 - 13:49:56 +0000"
        app.openshift.io/vcs-url: "https://github.com/RedHat-Middleware-Workshops/cloud-native-workshop-v2m2-labs.git"
        app.quarkus.io/commit-id: "7327a1af74f1bad6a999ee6c0ff37a88453b4cff"
        app.quarkus.io/vcs-url: "https://github.com/RedHat-Middleware-Workshops/cloud-native-workshop-v2m2-labs.git"
      labels:
        app.kubernetes.io/name: "inventory"
        app.kubernetes.io/version: "1.0-SNAPSHOT"
        app.openshift.io/runtime: "quarkus"
    spec:
      containers:
      - args:
        - "-jar"
        - "/deployments/inventory-1.0-SNAPSHOT-runner.jar"
        - "-cp"
        - "/deployments/lib/jakarta.annotation.jakarta.annotation-api-1.3.5.redhat-00002.jar:/deployments/lib/jakarta.el.jakarta.el-api-3.0.3.redhat-00002.jar:/deployments/lib/jakarta.interceptor.jakarta.interceptor-api-1.2.5.redhat-00002.jar:/deployments/lib/jakarta.enterprise.jakarta.enterprise.cdi-api-2.0.2.redhat-00002.jar:/deployments/lib/io.smallrye.config.smallrye-config-common-1.7.0.redhat-00001.jar:/deployments/lib/io.smallrye.config.smallrye-config-1.7.0.redhat-00001.jar:/deployments/l [...]
        - "-Dquarkus.http.host=0.0.0.0"
        - "-Djava.util.logging.manager=org.jboss.logmanager.LogManager"
        command:
        - "java"
        image: "jboss/inventory:1.0-SNAPSHOT"
        imagePullPolicy: "Always"
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: "/health/live"
            port: 8080
            scheme: "HTTP"
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: "inventory"
        ports:
        - containerPort: 8080
          name: "http"
          protocol: "TCP"
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: "/health/ready"
            port: 8080
            scheme: "HTTP"
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
      serviceAccount: "inventory"
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - "inventory"
      from:
        kind: "ImageStreamTag"
        name: "inventory:1.0-SNAPSHOT"
    type: "ImageChange"
---
apiVersion: "route.openshift.io/v1"
kind: "Route"
metadata:
  labels:
    app.kubernetes.io/name: "inventory"
    app.kubernetes.io/version: "1.0-SNAPSHOT"
  name: "inventory"
spec:
  host: ""
  path: "/"
  port:
    targetPort: 8080
  to:
    kind: "Service"
    name: "inventory"
